--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,9 @@
 <resources>
     <string name="app_name">EagleFit</string>
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="switchLabel1">Front</string>
+    <string name="switchLabel2">Back</string>
+    <string name="frImageDesc">Image for front of muscle chart</string>
+    <string name="bImageDesc">Image for back of muscle chart</string>
+
 </resources>
